# openapi.yml
@@ -15,36 +15,18 @@ components:
         - $ref: "#/components/schemas/NewUser"
         - type: object
           properties:
-            followers:
-              type: number
-            following:
-              type: array
-              items:
-                type: string
             _id:
               type: string
-            preferences:
-              items:
-                type: string
-              type: array
-            registrationType:
-              enum:
-                - local
-                - Facebook
-                - Twitter
+            perfilImage:
               type: string
 
     NewUser:
       properties:
         email:
           type: string
-        facebook:
-          type: string
         name:
           type: string
         password:
-          type: string
-        perfilImage:
           type: string
         surname:
           type: string
@@ -139,7 +121,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/AuthResponse"
 
-  /user:
+  /user/{id} :
     get:
       description: Obtiene un usuario
       tags: [User]
